--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,17 @@
 <button md-button [mdMenuTriggerFor]="menu">Menu</button>
+
+<md-sidenav-container class="example-container">
+  <md-sidenav #sidenav class="example-sidenav">
+    Jolly good!
+  </md-sidenav>
+
+  <div class="example-sidenav-content">
+    <button md-button (click)="sidenav.open()">
+      Open sidenav
+    </button>
+  </div>
+</md-sidenav-container>
+
 <md-menu #menu="mdMenu">
   <button md-menu-item routerLink="/home">Accueil</button>
 	<button md-menu-item routerLink="/tournaments">Mes tournois</button>
