--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,28 @@
-<button md-button [mdMenuTriggerFor]="menu">Menu</button>
+<md-sidenav-container class="sidenav-container">
+	<md-sidenav #sidenav class="sidenav">
+		<md-list>
+			<md-list-item>
+				<a routerLink="/home" (click)="sidenav.close()">Accueil</a>
+			</md-list-item>
+			<md-list-item>
+				<a routerLink="/tournaments" (click)="sidenav.close()">Mes tournois</a>
+			</md-list-item>
+			<md-list-item>
+				<a routerLink="/tournaments/create" (click)="sidenav.close()">Créer un tournoi</a>
+			</md-list-item>
+			<md-list-item>
+				<a routerLink="/about" (click)="sidenav.close()">À propos</a>
+			</md-list-item>
+		</md-list>
+	</md-sidenav>
 
-<md-sidenav-container class="example-container">
-  <md-sidenav #sidenav class="example-sidenav">
-    Jolly good!
-  </md-sidenav>
+	<md-toolbar color="primary">
+		<button md-icon-button (click)="sidenav.open()">
+			<md-icon>menu</md-icon>
+		</button>
+		<span>Tournaments</span>
+	</md-toolbar>
 
-  <div class="example-sidenav-content">
-    <button md-button (click)="sidenav.open()">
-      Open sidenav
-    </button>
-  </div>
+	<router-outlet></router-outlet>
+
 </md-sidenav-container>
-
-<md-menu #menu="mdMenu">
-  <button md-menu-item routerLink="/home">Accueil</button>
-	<button md-menu-item routerLink="/tournaments">Mes tournois</button>
-	<button md-menu-item routerLink="/tournaments/create">Créer un tournoi</button>
-	<button md-menu-item routerLink="/about">À propos</button>
-</md-menu>
-
-<router-outlet></router-outlet>
